feat: add RAC thread awareness (Phase 1)
Add thread field throughout the redo-log pipeline to support Oracle RAC
multi-instance environments. This is the foundation for per-thread
processing in later phases.

- RedoLog: add thread member with ordering
- Reader: read thread from redo header (offset 176)
- Parser: configurable thread field, use in dump output
- Replicator: SeqThread struct, parse %t/%T from log_archive_format
- ReplicatorOnline: SQL queries SELECT/filter THREAD#, standby query
- SerializerJson: serialize thread in checkpoints (backward compat)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -134,7 +134,15 @@ endif ()
 target_link_libraries(OpenLogReplicator Threads::Threads)
 
 if (WITH_OCI)
-    target_link_libraries(OpenLogReplicator clntshcore nnz19 clntsh)
+    file(GLOB NNZ_LIBS "${WITH_OCI}/libnnz*.so")
+    if (NNZ_LIBS)
+        list(GET NNZ_LIBS 0 NNZ_LIB)
+        get_filename_component(NNZ_NAME "${NNZ_LIB}" NAME_WE)
+        string(REGEX REPLACE "^lib" "" NNZ_NAME "${NNZ_NAME}")
+    else ()
+        set(NNZ_NAME "nnz19")
+    endif ()
+    target_link_libraries(OpenLogReplicator clntshcore ${NNZ_NAME} clntsh)
 endif ()
 
 if (WITH_RDKAFKA)
