build: run tests outside Dockerfile, keep binary in build dir
Move ctest out of the Docker build into build-image.sh so test failures
don't invalidate the build layer cache. Keep OLR binary in the cmake
build dir (cp instead of mv) so the test harness can find it.

--- a/Dockerfile.local
+++ b/Dockerfile.local
@@ -144,11 +144,10 @@ RUN --mount=type=cache,target=/root/.ccache,id=olr-ccache \
         -DCMAKE_CXX_COMPILER_LAUNCHER=ccache && \
     cmake --build ./ --target OpenLogReplicator -j && \
     if [ "${WITHTESTS}" != "" ]; then \
-        cmake --build ./ --target olr_tests -j && \
-        ctest --output-on-failure ; \
+        cmake --build ./ --target olr_tests -j ; \
     fi && \
     mkdir -p /opt/OpenLogReplicator/log /opt/OpenLogReplicator/tmp /opt/OpenLogReplicator/scripts && \
-    mv ./OpenLogReplicator /opt/OpenLogReplicator && \
+    cp ./OpenLogReplicator /opt/OpenLogReplicator && \
     cp -p /opt/OpenLogReplicator-local/scripts/gencfg.sql /opt/OpenLogReplicator/scripts/gencfg.sql
 
 # Layer 8: User setup
