test: add regression test framework with multi-environment support
Docker-based test infrastructure for OLR regression testing:
- Dockerfile.dev: dev image with all deps + gtest
- Per-environment configs in tests/1-environments/ (free-23 first)
- generate.sh: 7-stage pipeline (SQL → redo capture → schema →
  LogMiner → OLR → compare → golden file)
- test_pipeline.cpp: parameterized gtest, auto-discovers fixtures
  from both 2-prebuilt/ (Git LFS) and 3-generated/ (CI artifact)
- compare.py: content-based OLR vs LogMiner matching
- CI: sql-tests-free23 (generates fixtures), redo-log-tests (replays)
- Includes basic-crud scenario as initial SQL test input

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -127,6 +127,10 @@ if (WITH_PROTOBUF)
 endif ()
 
 add_subdirectory(src)
+if (WITH_TESTS)
+    enable_testing()
+    add_subdirectory(tests)
+endif ()
 
 target_link_libraries(OpenLogReplicator Threads::Threads)
 
